# simple_parser

./: README.md  coindesk_news.csv  pyproject.toml
src/: coindesk_parser.py  config.py  main.py  utils.py
