[tool.poetry]
name = "another-crypto-parser"
version = "0.1.0"
description = ""
authors = ["RussianProgram <kurban.kerimhanov@gmail.com>"]
readme = "README.md"
packages = []

[tool.poetry.dependencies]
python = "^3.10"
beautifulsoup4 = "^4.12.2"
selenium = "^4.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
